@@ -1,3 +1,14 @@
+2008-04-07  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/chart/renderer/xy/AbstractXYItemRenderer.java:
+    Updated various method to use fireChangeEvent(),
+    * source/org/jfree/chart/renderer/xy/XYBlockRenderer.java:
+    (setBlockWidth): Use fireChangeEvent(),
+    (setBlockHeight): Likewise,
+    (setBlockAnchor): Likewise,
+    (setPaintScale): Likewise,
+    (drawItem): Added code to collect entity information.
+
 2008-03-31  David Gilbert  <david.gilbert@object-refinery.com>
 
     * source/org/jfree/chart/plot/PiePlot.java
